--- a/CSS - Files/Product_Page.css
+++ b/CSS - Files/Product_Page.css
@@ -79,6 +79,31 @@ body {
     background-color: #5f1f94;
 }
 
+/* --- btn --- */
+.btn {
+    padding: 0.5rem 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-left: 0.5rem;
+    border: none;
+}
+.btn.sign_in {
+    background-color: #fff;
+    color: #000;
+    padding: 0.5rem 0.8rem;
+}
+.btn.sign_in:hover {
+    opacity: 0.9;
+}
+.btn.register {
+    background-color: #cdcdcd;
+    color: #000;
+    padding: 0.5rem 0.8rem;
+}
+.btn.register:hover {
+    opacity: 0.9;
+}
 
 /* --- Main --- */
 .container {
