--- a/CSS - Files/Delivery.css
+++ b/CSS - Files/Delivery.css
@@ -203,7 +203,7 @@ footer {
     padding: 0.75rem 1rem;
     border: 1px solid #eee;
     border-radius: 8px;
-    background-color: #fff;
+    background-color: #FBFBFA;
 }
 
 .form-field label {
@@ -217,6 +217,7 @@ footer {
     outline: none;
     font-size: 1rem;
     color: #444;
+    background-color: #FBFBFA;
 }
 
 .form-field input::placeholder {
@@ -281,8 +282,61 @@ footer {
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.2s ease;
+    margin-top: 1rem;
 }
 
 .buy-button:hover {
     background-color: #ff4f76;
 }
+
+.delivery-choice {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.delivery-option {
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+/* Skryté rádio */
+.delivery-option input[type="radio"] {
+    display: none;
+}
+
+/* Hviezdička základná */
+.delivery-option .star {
+    font-size: 1.5rem;
+    color: #ccc;
+    transition: color 0.2s ease;
+}
+
+/* Hviezdička po kliknutí */
+.delivery-option input[type="radio"]:checked + .star {
+    color: #facc15; /* žltá */
+    font-weight: bold;
+}
+
+.label-text {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1; /* zaberie celé dostupné miesto */
+}
+
+.label-text .name {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #333;
+}
+
+.label-text .price {
+    font-size: 1.5rem;
+    color: #666;
+}
+
