--- a/CSS - Files/Product_Page.css
+++ b/CSS - Files/Product_Page.css
@@ -254,7 +254,7 @@ footer {
 .logo_placeholder {
     width: 50px;
     height: 50px;
-    background-color: #ccc;
+    background: url("../Photos_DG/Dungeon_goodies.png") center center no-repeat;
     border-radius: 4px;
 }
 .information_text {
