--- a/CSS - Files/Product_Page.css
+++ b/CSS - Files/Product_Page.css
@@ -220,6 +220,12 @@ body {
     font-weight: bold;
 }
 
+.sale_price {
+    font-size: 14px;
+    font-weight: bold;
+    color: #cd1515;
+}
+
 .heart {
     position: absolute;
     right: 11px;
@@ -249,13 +255,18 @@ footer {
     margin: 0 auto;
     padding: 0 1rem;
 }
-.logo_part {
-}
-.logo_placeholder {
-    width: 50px;
-    height: 50px;
+
+.logo_dungeon_goodies {
+    width: 40px;
+    height: 40px;
     background: url("../Photos_DG/Dungeon_goodies.png") center center no-repeat;
+    cursor: pointer;
+    text-decoration: none;
     border-radius: 4px;
+    display: inline-block;
+}
+.logo_dungeon_goodies:hover {
+    opacity: 0.9;
 }
 .information_text {
     flex: 1;
