--- a/CSS - Files/Product_Page.css
+++ b/CSS - Files/Product_Page.css
@@ -116,7 +116,6 @@ body {
     width: 250px;
     background: #f8f8f8;
     padding: 15px;
-    border-radius: 8px;
 }
 
 .tags {
@@ -124,6 +123,7 @@ body {
     flex-wrap: wrap;
     gap: 5px;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .tag {
@@ -135,7 +135,7 @@ body {
 
 .product-type label {
     display: block;
-    margin: 5px 0;
+    margin-top: 10px;
 }
 
 .products-grid {
@@ -224,6 +224,19 @@ body {
     font-size: 14px;
     font-weight: bold;
     color: #cd1515;
+}
+
+.sale-banner {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: red;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 5px 5px 0 0;
 }
 
 .heart {
