Updated Product_Page and did minor changes

--- a/CSS - Files/Product_Page.css
+++ b/CSS - Files/Product_Page.css
@@ -118,6 +118,7 @@ body {
     width: 250px;
     background: #f8f8f8;
     padding: 15px;
+    border-radius: 10px;
 }
 
 .tags {
@@ -155,8 +156,14 @@ body {
     border-radius: 25px;
     border: 1px solid #ddd;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-right: auto;
 }
-
+.search-icon {
+    background-color: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
 .search-bar {
     flex: 1;
     border: none;
@@ -166,6 +173,7 @@ body {
     font-size: 16px;
     background: transparent;
     color: #666;
+    padding-right: 35px;
 }
 
 .search-bar::placeholder {
@@ -179,8 +187,16 @@ body {
 }
 
 .sort-options {
+    margin-top: 17px;
     display: flex;
     gap: 10px;
+    margin-bottom: 20px;
+    justify-content: flex-end;
+}
+.top-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin-bottom: 20px;
 }
 
@@ -191,10 +207,22 @@ body {
     cursor: pointer;
     border-radius: 5px;
 }
+.sort-options button:hover {
+    opacity: 0.9;
+}
 
 .sort-options .active {
     background: black;
     color: white;
+}
+.sort-options .pa:hover {
+    opacity: 0.8;
+}
+.sort-options .pd:hover {
+    opacity: 0.8;
+}
+.sort-options .ra:hover {
+    opacity: 0.8;
 }
 
 .product-list {
@@ -225,14 +253,14 @@ body {
 .sale_price {
     font-size: 14px;
     font-weight: bold;
-    color: #cd1515;
+    color: #ba3b3b;
 }
 
 .sale-banner {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background: red;
+    background: #ba3b3b;
     color: white;
     font-size: 14px;
     font-weight: bold;
