--- a/CSS - Files/Admin_Page.css
+++ b/CSS - Files/Admin_Page.css
@@ -25,10 +25,7 @@ body {
     align-items: center;
     gap: 0.94rem;
 }
-.buttons {
-    display: flex;
-    align-items: center;
-}
+
 .logo_dungeon_goodies {
     width: 40px;
     height: 40px;
@@ -41,75 +38,12 @@ body {
 .logo_dungeon_goodies:hover {
     opacity: 0.9;
 }
-.products {
-    color: #000;
-    font-weight: 780;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    border-radius: 8px;
-    opacity: 0.70;
-}
-.link_type.products:hover{
-    opacity: 0.8;
-}
-.link_type.sales {
-    color: #b91d1d;
-    font-weight: 800;
-    text-decoration: none;
-}
-.link_type.sales:hover {
-    color: #cd1515;
-}
-
-.shopping_cart_btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    padding: 0.25rem 5.0rem;
-    border-radius: 10px;
-    border: none;
-    margin-left: 0.5rem;
-    cursor: pointer;
-
-    background-color: #561c88;
-    color: #fff;
-    text-decoration: none;
-}
-
-.shopping_cart_btn:hover {
-    background-color: #5f1f94;
-}
-
-/* --- btn --- */
-.btn {
-    padding: 0.5rem 1rem;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 10px;
-    margin-left: 0.5rem;
-    border: none;
-}
-.btn.sign_in {
-    background-color: #fff;
-    color: #000;
-    padding: 0.5rem 0.8rem;
-}
-.btn.sign_in:hover {
-    opacity: 0.9;
-}
-.btn.register {
-    background-color: #cdcdcd;
-    color: #000;
-    padding: 0.5rem 0.8rem;
-}
-.btn.register:hover {
-    opacity: 0.9;
-}
 
 /* --- Main --- */
 .container {
     text-align: center;
+    margin: 50px auto;
+    padding: 50px;
 }
 
 h1 {
@@ -134,7 +68,7 @@ h1 {
     max-width: 300px;
     margin: 0 auto;
     border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: background 0.3s;
 }
 
