--- a/CSS - Files/Payment_Succeeded_Page.css
+++ b/CSS - Files/Payment_Succeeded_Page.css
@@ -4,10 +4,25 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     font-family: Arial, sans-serif;
     color: #333;
+    flex: 1;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+main {
+    flex: 1;
 }
 
 /* --- Blue Panel --- */
@@ -25,7 +40,6 @@ body {
     align-items: center;
     gap: 0.94rem;
 }
-
 .logo_dungeon_goodies {
     width: 40px;
     height: 40px;
@@ -39,44 +53,38 @@ body {
     opacity: 0.9;
 }
 
-/* --- Main --- */
-.container {
+/* --- Window --- */
+.successful_pay {
+    margin-top: 50px;
     text-align: center;
-    margin: 50px auto;
-    padding: 50px;
+    padding: 4rem 1rem;
+    justify-content: center;
+    align-items: center;
 }
-
-h1 {
-    font-size: 2.5em;
-    margin-bottom: 45px;
+.tick {
+    width: 130px;
+    height: 130px;
+    margin-bottom: 1rem;
 }
-
-.accordion {
-    display: flex;
+.successful_pay h2 {
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+    color: #000;
+}
+.successful_pay button {
+    background-color: #F75E85;
+    color: white;
+    border: none;
+    padding: 0.75rem 2rem;
+    font-size: 1rem;
     font-weight: bold;
-    font-size: 18px;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.accordion-button {
-    background-color: #f0f0f0;
-    padding: 15px;
-    font-size: 14px;
-    font-weight: bold;
+    border-radius: 8px;
     cursor: pointer;
-    text-align: left;
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: background 0.3s;
-    border: 2px solid #ebebeb;
+    transition: background-color 0.3s ease;
+    min-width: 290px;
 }
-
-.accordion-button:hover {
-    background-color: #e0e0e0;
+.successful_pay button:hover {
+    background-color: #f64a77;
 }
 
 /* --- Footer --- */
@@ -84,6 +92,7 @@ footer {
     background-color: #b7b7b7;
     padding: 1rem 0;
     color: #333;
+    margin-top: auto;
 }
 .bottom_panel {
     display: flex;
@@ -92,7 +101,6 @@ footer {
     margin: 0 auto;
     padding: 0 1rem;
 }
-
 .logo_dungeon_goodies {
     width: 40px;
     height: 40px;
