--- a/CSS - Files/SignIn_Register.css
+++ b/CSS - Files/SignIn_Register.css
@@ -146,6 +146,12 @@ footer {
 .information_text a:hover {
     color: #666;
 }
+.auth-container h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 26px;
+    text-align: center;
+}
 
 /* --- Other Settings --- */
 @media (max-width: 768px) {
