--- a/CSS - Files/Remove_Product_Page.css
+++ b/CSS - Files/Remove_Product_Page.css
@@ -4,7 +4,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     font-family: Arial, sans-serif;
     color: #333;
@@ -25,7 +24,6 @@ body {
     align-items: center;
     gap: 0.94rem;
 }
-
 .logo_dungeon_goodies {
     width: 40px;
     height: 40px;
@@ -45,21 +43,28 @@ body {
     margin: 50px auto;
     padding: 50px;
 }
-
 h1 {
     font-size: 2.5em;
     margin-bottom: 45px;
 }
-
-.accordion {
+.remover {
     display: flex;
     font-weight: bold;
     font-size: 18px;
     flex-direction: column;
     gap: 10px;
 }
-
-.accordion-button {
+.edit_product {
+    display: flex;
+    font-weight: bold;
+    font-size: 18px;
+    flex-direction: column;
+    gap: 10px;
+}
+.h1{
+    margin-bottom: 20px;
+}
+.remove_btn {
     background-color: #f0f0f0;
     padding: 15px;
     font-size: 16px;
@@ -74,8 +79,26 @@ h1 {
     transition: background 0.3s;
     border: 2px solid #ebebeb;
 }
-
-.accordion-button:hover {
+.remove_btn:hover {
+    background-color: #da7070;
+    border: 2px solid #da7070;
+}
+.edit_btn {
+    background-color: #f0f0f0;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: left;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: background 0.3s;
+    border: 2px solid #ebebeb;
+}
+.edit_btn:hover {
     background-color: #e0e0e0;
     border: 2px solid #e0e0e0;
 }
@@ -93,7 +116,6 @@ footer {
     margin: 0 auto;
     padding: 0 1rem;
 }
-
 .logo_dungeon_goodies {
     width: 40px;
     height: 40px;
