--- a/CSS - Files/Payment_Succeeded_Page.css
+++ b/CSS - Files/Payment_Succeeded_Page.css
@@ -139,22 +139,12 @@ footer {
     .main_window h1 {
         font-size: 2.5rem;
     }
-    .search_bar {
-        flex-direction: column;
-    }
-}
-
-@media (max-width: 768px) {
-    .cart_product {
-        flex-direction: column;
+    .information_text {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        gap: 0.5rem;
         align-items: flex-start;
-    }
-    .cart_product_right {
-        margin-top: 1rem;
-        align-items: flex-start;
-    }
-    .total_part {
-        flex-direction: column;
-        align-items: flex-start;
+        font-size: 12px;
     }
 }
