--- a/CSS - Files/Product_Detail.css
+++ b/CSS - Files/Product_Detail.css
@@ -365,29 +365,31 @@ footer {
 }
 
 /* --- Other Settings --- */
-@media (max-width: 768px) {
+@media (max-width: 500px) {
     .main_window h1 {
         font-size: 2.5rem;
     }
-
-    .search_bar {
-        flex-direction: column;
-    }
-}
-
-@media (max-width: 768px) {
-    .cart_product {
-        flex-direction: column;
+    .information_text {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        gap: 0.5rem;
         align-items: flex-start;
+        font-size: 12px;
     }
-
-    .cart_product_right {
-        margin-top: 1rem;
-        align-items: flex-start;
+    .blue_panel .types {
+        padding-left: 0.1rem;
+        font-size: 10px;
+        gap: 0.1rem;
     }
-
-    .total_part {
-        flex-direction: column;
-        align-items: flex-start;
+    .shopping_cart_btn {
+        background-color: #561c88;
+        padding: 0.3rem 0.5rem;
+    }
+    .btn.sign_in {
+        padding: 0.5rem 0.5rem;
+    }
+    .btn.register {
+        padding: 0.5rem 0.8rem;
     }
 }
