--- a/CSS - Files/SignIn_Register.css
+++ b/CSS - Files/SignIn_Register.css
@@ -50,7 +50,7 @@ body {
 }
 
 .auth-wrapper {
-    background-color: #b3b3b3; /* Grey box around the form */
+    background-color: #b3b3b3;
     padding: 40px;
     border-radius: 10px;
 }
@@ -154,26 +154,19 @@ footer {
 }
 
 /* --- Other Settings --- */
-@media (max-width: 768px) {
+@media (max-width: 500px) {
     .main_window h1 {
         font-size: 2.5rem;
     }
-    .search_bar {
-        flex-direction: column;
-    }
-}
-
-@media (max-width: 768px) {
-    .cart_product {
-        flex-direction: column;
+    .information_text {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        gap: 0.5rem;
         align-items: flex-start;
+        font-size: 12px;
     }
-    .cart_product_right {
-        margin-top: 1rem;
-        align-items: flex-start;
-    }
-    .total_part {
-        flex-direction: column;
-        align-items: flex-start;
+    .auth-wrapper{
+        padding: 20px 12px;
     }
 }
