--- a/CSS - Files/Delivery.css
+++ b/CSS - Files/Delivery.css
@@ -287,7 +287,7 @@ footer {
 }
 
 /* --- Other Settings --- */
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     .main_window h1 {
         font-size: 2.5rem;
     }
@@ -301,7 +301,7 @@ footer {
     }
     .blue_panel .types {
         padding-left: 0.1rem;
-        font-size: 10px;
+        font-size: 15px;
         gap: 0.1rem;
     }
     .shopping_cart_btn {
@@ -327,4 +327,8 @@ footer {
         align-items: flex-start;
     }
 }
-
+@media (max-width: 500px) {
+    .blue_panel .types {
+        font-size: 10px;
+    }
+}
