Added Photos for Dungeon Goodies Products and rest of the responsiveness, did some final touches.

--- a/CSS - Files/Main_Page.css
+++ b/CSS - Files/Main_Page.css
@@ -183,6 +183,12 @@ body {
     position: relative;
     margin-top: 1rem;
 }
+.scroller_img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 8px;
+}
 .scroller_button {
     background: #ddd;
     border: none;
