--- a/CSS - Files/Add_New_Product.css
+++ b/CSS - Files/Add_New_Product.css
@@ -83,6 +83,22 @@ main {
     font-weight: bold;
     border-radius: 4px;
 }
+.photo_section2 {
+    width: 300px;
+    height: 300px;
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    overflow: hidden;
+}
+.photo_section2 img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+}
 .product_form {
     display: flex;
     flex-direction: column;
