--- a/CSS - Files/Product_Page.css
+++ b/CSS - Files/Product_Page.css
@@ -260,7 +260,13 @@ body {
     color: inherit;
     display: block;
 }
-
+.product_img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    background-color: #fcfcfc;
+    border-radius: 5px;
+}
 .buy-btn {
     position: absolute;
     bottom: 10px;
