--- a/CSS - Files/Shopping_Cart.css
+++ b/CSS - Files/Shopping_Cart.css
@@ -77,6 +77,7 @@ body {
 }
 .shopping_cart_btn:hover {
     background-color: #5f1f94;
+    color: #fff;
 }
 
 /* --- btn --- */
@@ -133,9 +134,19 @@ body {
     gap: 1rem;
 }
 .cart_product_image {
-    width: 80px;
-    height: 80px;
-    background-color: #ccc;
+    width: 105px;
+    height: 105px;
+    background-color: #f9f9f9;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cart_product_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     border-radius: 4px;
 }
 .cart_product_image:hover {
